--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^4.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -33,7 +36,7 @@
     "filepond": "^4.32.7",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.12",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.4.10",
     "lodash": "^4.17.21",
     "lucide-react": "^0.476.0",
     "mapbox-gl": "^3.10.0",
